# infinity-faction-visualiser

./: .gitignore  Readme.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
src/: gui.py  plot.py
src/infinity_faction_visualiser/: __main__.py  gui.py  models.py  plot.py
